# polyfuzz

./: .gitignore  .gitmodules  Makefile  README.md  build.gradle.kts  polyfuzz
.github/workflows/: diffcomp.yml  orchestrator-tests.yml  verilex.yml
diffcomp/: .gitignore  build.gradle.kts  settings.gradle.kts
orchestrator/: README.md  pyproject.toml
orchestrator/src/polyfuzz_orchestrator/: campaign.py  cli.py  config.py  errors.py  layout.py  manifest.py  pipeline.py  process.py  seed.py
orchestrator/src/polyfuzz_orchestrator/analytics/: __init__.py  aggregator.py  metrics.py  parsers.py  writers.py
orchestrator/src/polyfuzz_orchestrator/data/: sml.dict
orchestrator/src/polyfuzz_orchestrator/stages/: __init__.py  afl.py  base.py  coverage.py  diffcomp.py  smlgen.py  validation.py
orchestrator/tests/: test_analytics_aggregator.py  test_analytics_metrics.py  test_analytics_parsers.py  test_analytics_writers.py  test_campaign.py  test_cli.py  test_config.py  test_errors.py  test_layout.py  test_pipeline.py  test_process.py  test_stages.py
polylex/: Main.sml  README.md  SETUP.md  build.sml  test.sml
polylex-harness/: LEX_.ML  Main.sml  Makefile  README.md  build.sml  polylex  polylex_c_shim.c  polylex_replay_shim.c
polylex-harness-fixed/: LEX_.ML  Main.sml  README.md  build.sml  coverage_report.py  polylex_fuzz  polylex_replay  replay_corpus.sh  stderr.txt  test.sml
polylex-harness-fixed/instrumentation/: tracer.c
polylex-harness-fixed/originals/: Symbols.ML  SymbolsSig.sml
smlgen/: README.md  build.gradle.kts
verilex/: README.md  build.gradle.kts
(+213 files in other folders)
